objects/DMAPP__Team_View_Plus_Views__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The list of reports and configurations to be used by Team View+</description>
    <fields>
        <fullName>DMAPP__Detail_Grouped_Fields__c</fullName>
        <label>Detail Grouped Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Detail_Grouping_Field__c</fullName>
        <label>Detail Grouping Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Display_Name__c</fullName>
        <label>Display Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Pebble_Threshold__c</fullName>
        <label>Pebble Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Report_Amount_Field__c</fullName>
        <description>If the report uses an Amount field other than AMOUNT, it should be specified here.</description>
        <label>Report Amount Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Report_Date_Grouping_Field__c</fullName>
        <label>Report Date Grouping Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Report_Date_Range_Field__c</fullName>
        <description>If this report should use a field other than close date (CLOSE_DATE) for filtering opportunities the field should be specified here.  The default will be CLOSE_DATE if this is left blank.</description>
        <label>Report Date Range Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Report_Dealmaker_Opportunity_Field__c</fullName>
        <label>Report Dealmaker Opportunity Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Report_Id__c</fullName>
        <label>Report Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Report_Probability_Field__c</fullName>
        <label>Probability Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Report_Quota_Field__c</fullName>
        <label>Report Quota Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Report_Sales_Process_Field__c</fullName>
        <label>Sales Process Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Report_Stage_Field__c</fullName>
        <label>Stage Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Report_User_Id_Field__c</fullName>
        <label>Report User Id Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Rock_Threshold__c</fullName>
        <label>Rock Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Status_Closed_Values__c</fullName>
        <label>Status Closed Value</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Status_Possible_Values__c</fullName>
        <label>Status Possible Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Status_Projected_Values__c</fullName>
        <label>Status Projected Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Dealmaker Team View+ Views</label>
</CustomObject>